--- a/index.html
+++ b/index.html
@@ -1,358 +1,12 @@
-<!DOCTYPE html>
-<html class="no-js" lang="">
+<!doctype html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>Caitlin Wolters Resume</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <meta property="og:title" content="" />
-    <meta property="og:type" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="site.webmanifest" />
-
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/main.css" />
-
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Outfit"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Futura"
-    />
-
-    <meta name="theme-color" content="#fafafa" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Title</title>
   </head>
-
   <body>
-    <h1>Caitlin Wolters</h1>
-    <h2>Senior Frontend Software Engineer</h2>
-    <h4>
-      I specialize in building complex React-based web applications, with a
-      background in data analytics software and GIS.
-    </h4>
-
-    <section>
-      <h2>Skills</h2>
-      <section class="compact">
-        <h3>Frontend</h3>
-        <h4>Javascript, React, Typescript, Webpack, Redux, Angular</h4>
-      </section>
-      <section class="compact">
-        <h3>Design</h3>
-        <h4>HTML5, CSS / SCSS, Figma</h4>
-      </section>
-      <section class="compact">
-        <h3>Workflow + Testing</h3>
-        <h4>git + GitHub, Agile, Jira, Jest, Cypress</h4>
-      </section>
-      <section class="compact">
-        <h3>Data Visualization + Maps</h3>
-        <h4>AG Grid, d3, OpenLayers, Leaflet, Google Maps, Mapbox</h4>
-      </section>
-      <section class="compact">
-        <h3>Backend</h3>
-        <h4>Node, various SQL flavors, Postgres</h4>
-      </section>
-      <section class="compact">
-        <h3>GIS</h3>
-        <h4>ArcGIS, QGIS</h4>
-      </section>
-    </section>
-
-    <section>
-      <h2>Soft Skills</h2>
-      <section>
-        <h3>Leadership</h3>
-        <p>
-          At Ridgeline I became the subject matter expert on our product's data
-          grid component, which was used extensively across 12 repositories. I
-          led several projects related to our grids, including: implementing a
-          brand new validation framework, writing a server-backed grid, and
-          leading our team's project to upgrade the grid's underlying library 3
-          major versions. 
-        </p>
-        <p>
-          At Heavy.ai I was nominated to be a Team Lead. I led several projects
-          to build new features - handling both project management tasks as well
-          as contributing to the code. I led the team’s retrospectives, and
-          facilitated feedback between our team and all levels of management
-          (including our CEO). I also led our bi-weekly Engineering Demo
-          meetings, where I coordinated presenting new product features to the
-          company. Lastly, I worked to coordinate a company-wide on-call system
-          to improve triaging of critical bugs and cross-team communication.
-        </p>
-      </section>
-      <section>
-        <h3>Communication</h3>
-        <p>
-          I do my best to provide prompt, empathetic, and humble communication
-          with everyone at my company. It's also my passion to write
-          easily-readable, well-documented code. Additionally, the VP of
-          Marketing at OmniSci called my presentation skills “fantastic”.
-        </p>
-      </section>
-      <section>
-        <h3>Culture building</h3>
-        <p>
-          At Omnisci, I had a strong impact on building a positive culture: I
-          founded and ran our Mario Kart night - we met twice weekly for over 5
-          months and attracted people from all over the company. I also led an
-          initiative to have a coordinated team Halloween costume, which won our
-          company’s costume prize. Additionally, I frequently facilitated social
-          meetings with my coworkers - including one that continues to meet long
-          after I've left the company.
-        </p>
-      </section>
-    </section>
-
-    <section>
-      <h2>Work Experience</h2>
-      <section>
-        <h3>Ridgeline</h3>
-        <span class="title-date">
-          <h4>Senior Product Engineer</h4>
-          <h5>February 2021 - present</h5>
-          <p>
-            I am currently working on our company's UI component library team,
-            specializing in building our data table components and related
-            functionality.
-          </p>
-          <p>
-            Subject matter expert and effective tech lead for our product's data
-            grid component, which is used heavily by our customers to manage
-            investment data (trade orders, accounting, reporting, etc).
-          </p>
-          <p>
-            I'm currently working on a team that is writing a new table
-            component that is datasource-agnostic and serves the needs of
-            rapidly-updating financial data.
-          </p>
-          <h4>Recent projects:</h4>
-          <ul>
-            <li>Built out a global validation framework that could be used
-            across forms and tables using a library called yup</li>
-            <li>Designed and built row grouping capabilities within our new
-            table component, including architecture for calculating aggregate
-            data and the architecture required to paginate over collapsed groups
-            in a server-side environment</li>
-            <li>
-              Led a project to build a server-backed grid component to meet an
-              urgent customer need.
-            </li>
-            <li>
-              Led 6-month project to upgrade our grid component to the a new
-              version of the underlying library without disrupting extensive
-              usage throughout the product.
-            </li>
-          </ul>
-          <h4>Additional responsibilities:</h4>
-          <ul>
-            <li>Interviewing prospective hires</li>
-            <li>Mentoring junior developers across multiple teams</li>
-          </ul>
-        </span>
-      </section>
-      <section>
-        <h3>Heavy.ai (formerly OmniSci)</h3>
-        <span class="title-date">
-          <h4>Front End Engineer, Front End Team Lead</h4>
-          <h5>January 2019 - February 2021</h5>
-        </span>
-        <p>
-          As a team lead, I coordinated: daily standups, cross-team issue
-          triaging, company-wide feature demos, team retrospectives, and the
-          team's on-call system.
-        </p>
-        <p>
-          I was a project lead for major functionality that debuted in our
-          largest release to-date. This functionality was also demoed by the CEO
-          at the company’s first ever user conference
-        </p>
-
-        <h4>New skills learned:</h4>
-        <ul>
-          <li>
-            Advanced data visualization. Charts like: bar charts, line charts,
-            heatmaps - and the SQL that drives those charts
-          </li>
-          <li>Data analytics concepts like cohorts, TopN, pre/post-filters</li>
-          <li>
-            How to design UI to support data analytics - selecting, filtering,
-            and presenting data
-          </li>
-          <li>
-            How to provide data analytics tools for enterprise customers with
-            big data
-          </li>
-          <li>
-            Advanced frontend architectural concepts, especially as it pertains
-            to organizing data
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h3>Yale University</h3>
-        <span class="title-date">
-          <h4>Front End Web Developer, Web Applications Developer</h4>
-          <h5>January 2018 - January 2019</h5>
-        </span>
-        <p>
-          I built a user interface for scientists to upload and create
-          geospatial data related to plant and animal biodiversity.
-        </p>
-        <p>
-          I led an initiative to rebuild a suite of outdated applications.
-          Notably, I built an Angular-based UI component library. Additionally,
-          I built an Angular-based boilerplate for use in each application
-          overhaul or in new application launches.
-        </p>
-        <p>
-          I also led an initiative to internationalize our Angular app. This
-          included writing Node scripts to facilitate the translation process
-          and establishing procedures for maintaining internationalization
-          alongside new app development.
-        </p>
-        <h4>Extracurriculars:</h4>
-        <ul>
-          <li>
-            Course Audit: Data Structures and Programming Techniques, Yale
-            Department of Computer Science
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h3>Wolters GeoDevelopment, LLC</h3>
-        <span class="title-date">
-          <h4>Owner</h4>
-          <h5>November 2014 - December 2017</h5>
-        </span>
-        <p>
-          Immediately after graduating, I founded and ran a small business doing
-          GIS-related web development. I worked primarily with nonprofit
-          organizations to develop web map applications and data visualization
-          tools.
-        </p>
-        <h4>Responsibilities:</h4>
-        <ul>
-          <li>
-            Small business management tasks: initiation of client relationships;
-            determining project scopes; contract creation; communication.
-          </li>
-          <li>
-            Front-end and back-end web development: ground-up creation of web
-            mapping and data-visualization utilities
-          </li>
-          <li>Spatial data processing</li>
-          <li>
-            Updating and maintaining public datasets stored in PGSQL databases
-          </li>
-        </ul>
-        <h4>Notable Clients:</h4>
-        <ul>
-          <li>The Association of State Floodplain Managers</li>
-          <li>SharedGeo</li>
-        </ul>
-      </section>
-      <section>
-        <h3>Wisconsin State Cartographer's Office</h3>
-        <span class="title-date">
-          <h4>GIS / Web Development Assistant</h4>
-          <h5>September 2013 - December 2014</h5>
-        </span>
-        <h4>Responsibilities:</h4>
-        <ul>
-          <li>
-            Web map application project lead, creation of web mapping
-            applications and internal government mapping utilities
-          </li>
-          <li>Updating, designing, and maintaining spatial databases</li>
-          <li>Spatial data processing</li>
-          <li>Maintenance of public data sources</li>
-          <li>Spatial data quality review</li>
-        </ul>
-      </section>
-    </section>
-
-    <section>
-      <h2>Education</h2>
-      <section>
-        <h3>University of Wisconsin-Madison</h3>
-        <span class="title-date">
-          <h4>BS in Geographic Information Sciences and Cartography</h4>
-          <h5>Fall 2010 - Fall 2014</h5>
-        </span>
-        <p>
-          I focused on interactive cartography and web-development related
-          classes. I worked as an intern during the last year and a half of
-          university doing GIS-related web development. I took two directed
-          study courses that involved developing web applications that focused
-          on geospatial data.
-        </p>
-      </section>
-    </section>
-
-    <section>
-      <h2>Other Stuff</h2>
-      <section>
-        <h3>Accomplishments:</h3>
-        <ul>
-          <li>Private Pilot License, 2010</li>
-          <li>NOLS Himalaya Mountaineering Course, India, 2011</li>
-          <li>Ultramarathon 8th place female finisher, Chippewa 50k, 2013</li>
-        </ul>
-      </section>
-      <section>
-        <h3>Praise</h3>
-        <blockquote>
-          One thing that I appreciate (and our team appreciates) is that Caitlin
-          takes time 'to leave a place better than she found it.' As she is
-          working, she regularly takes time to refactor existing code for the
-          better or if the changes are too far off her current track, then she
-          will file a JIRA with breadcrumbs.
-        </blockquote>
-        <cite>&#8211; VP of Platform Engineering at Ridgeline</cite>
-
-        <blockquote>
-          Caitlin’s strong technical background enabled her to come up to speed
-          quickly, and she continues to produce high quality PRs that impress
-          her peers.
-        </blockquote>
-        <cite>&#8211; VP of Platform Engineering at Ridgeline</cite>
-        <blockquote>
-          Caitlin has been really selfless with her time helping the [team]
-          discover new Grid offerings and understand how to implement new
-          features. I am personally in awe of the way Caitlin has been handling
-          feature requests from Product teams. She is never phased by our
-          complex asks. Grids are some of the most (if not the most) complicated
-          Platform offerings, and Caitlin has been an awesome captain [...]. She
-          has been a great partner to our team.
-        </blockquote>
-        <cite>&#8211; Engineering Manager at Ridgeline</cite>
-        <blockquote>
-          [Her] eye for details, personal standard of quality, ability and
-          courage to tackle big complex things are all astounding, and have made
-          [her] an awesome teammate. 
-        </blockquote>
-        <cite>&#8211; Staff Engineer at Ridgeline</cite>
-      </section>
-    </section>
-
-    <section>
-      <h2>Contact</h2>
-      <ul>
-        <li>wolters.caitlin@gmail.com</li>
-        <li>
-          <a href="https://www.linkedin.com/in/caitlinwolters/">LinkedIn</a>
-        </li>
-      </ul>
-    </section>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
